fixed Starbound image not showing, added links to topbar

--- a/style.css
+++ b/style.css
@@ -132,3 +132,8 @@ ul.Header {
     margin-bottom: 50px;
     gap: 12px;
   }
+
+  a {
+    text-decoration: none;
+    color: inherit
+  }
